--- a/tecnicos/mt07/index.html
+++ b/tecnicos/mt07/index.html
@@ -668,6 +668,7 @@
 <p>Se creo un servidor web en el ESP32 que permite mover un servo motor desde un control deslizante en la página web. El valor del slider se envía al ESP32 y se usa para mover el servo.</p>
 <p>Además se muestra el estado de un botón. Hay un botón físico conectado al pin 27 del ESP32. Se creó un elemento en la página web que muestra si el botón está &ldquo;Presionado&rdquo; o &ldquo;No presionado&rdquo;. La ESP32 actualiza esta información cada 2 segundos.</p>
 <p>La comunicación con el servidor web se comunica con el ESP32 usando peticiones de HTTP para cambiar el valor del servo o pedir el estado del botón.</p>
+<p><img alt="" src="../../images/MT07/image_02.png" /></p>
 <p><img alt="" src="../../images/MT07/image_03.jpg" /></p>
 <p>Además se dejo el video mostrando evidencia.</p>
 <p><a href="https://www.youtube.com/watch?v=_YkmqT6Rw3s">VIdeo demostrativo</a></p>
