deploy: 33df04fd3e251cf02af344141fa0153d57a8c7d9

--- a/proyecto/proyectofinal/index.html
+++ b/proyecto/proyectofinal/index.html
@@ -832,7 +832,7 @@
 <p>Las partes y sistemas desarrollados y fabricadas son:</p>
 <ul>
 <li>
-<p>EstructurA: Fabricada en PLA mediante impresión 3D para soporte del aerogenerador.</p>
+<p>Estructura: Fabricada en PLA mediante impresión 3D para soporte del aerogenerador.</p>
 </li>
 <li>
 <p>Aspas del aerogenerador: Diseñadas y fabricadas para capturar la energía eólica.</p>
